--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -7,6 +7,7 @@
 .headerComponent__container {
 	display: flex;
 	align-items: center;
+	justify-content: space-between;
 }
 
 .headerComponent__container__menuBurger {
