--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -3,7 +3,14 @@
 }
 
 .sidebarContainer__link {
-	color: #4a6289 !important;
+	display: inline-block;
+	color: #4a6289;
+	padding: 0 5px 0 5px;
+	border-radius: 5px;
+}
+
+.sidebarContainer__link:hover {
+	background-color: #4a6289;
 }
 
 .sidebarContainer__link__text {
@@ -14,7 +21,8 @@
 	color: #4a6289;
 	text-decoration:none;
 }
+
 .sidebarContainer a:hover {
-	color: #4a6289;
+	color: #EDF1F7;
 	text-decoration:none;
 }
